fix horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -3066,6 +3066,11 @@ ul { list-style: none; }
     }
 }
 
+html {
+    overflow-x: hidden!important;
+    width: 100vw!important;
+}
+
 html body {
     overflow-x: hidden!important;
     width: 100vw!important;
